--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.2",
         "maatwebsite/excel": "^3.1",
+        "realrashid/sweet-alert": "^6.0",
         "spatie/laravel-backup": "^8.1"
     },
     "require-dev": {
